Finished reader overlay

--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -38,9 +38,12 @@ html
             a(id="add-column-button", href='#') Add Column
             span \ ]
       #folio
-        h1.modalInput(rel="#test") The Headlyne Times
+        h1 The Headlyne Times
         #subtitle December 23, 2010
-	  div#test.modal hello
+    #reader.modal
+      .content
+        h2.title
+        .body
     #content!= content
     #footer
       #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
