--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -182,6 +182,10 @@
 				> .url {
 					display: none;
 				}
+				
+				> .title {
+					cursor: pointer;
+				}
 			}
 			
 			> .body {
@@ -222,28 +226,20 @@
 }
 
 .modal {
-		background-color:#fff;
-		display:none;
-		width:350px;
-		padding:15px;
-		text-align:left;
-		border:2px solid #333;
-		
-		opacity:0.8;
-		-moz-border-radius:6px;
-		-webkit-border-radius:6px;
-		-moz-box-shadow: 0 0 50px #ccc;
-		-webkit-box-shadow: 0 0 50px #ccc;
-	}
+	background-color:#fff;
+	display:none;
+	width:90%;
+	padding:15px;
+	text-align:left;
+	border:2px solid #333;
 	
-	.modal h2 {
-		margin:0px;
-		padding:10px 0 10px 45px;
-		border-bottom:1px solid #333;
-		font-size:20px;
-	}
+	opacity:0.9;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	-moz-box-shadow: 0 0 50px #ccc;
+	-webkit-box-shadow: 0 0 50px #ccc;
 	
-	.modal .close {
+	> .close {
 		background-image:url(/includes/img/buttons/close.png);
 		position:absolute;
 		right:-15px;
@@ -251,4 +247,39 @@
 		cursor:pointer;
 		height:35px;
 		width:35px;
-	}		
+	}
+}
+
+#reader {
+	.content {
+		position: absolute;
+		overflow-y: auto;
+		top: 20px;
+		bottom: 20px;
+		
+		> .title {
+			margin:0px;
+			margin-bottom:10px;
+			padding:10px 0 10px 5px;
+			border-bottom:1px solid #333;
+		}
+		
+		> .body {
+			pre {
+				white-space: pre-wrap;       /* css-3 */
+				white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+				white-space: -pre-wrap;      /* Opera 4-6 */
+				white-space: -o-pre-wrap;    /* Opera 7 */
+				word-wrap: break-word;       /* Internet Explorer 5.5+ */
+			}
+			
+			img {
+				max-width:100%;
+				height:auto;
+			}
+		}
+	}
+	
+	top: 30px !important;
+	bottom: 30px !important;
+}
