--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -30,11 +30,11 @@
       .header
         - if (title_selection == "item")
           - if (item.title)
-            h2.title= item.title
+            h2.title.modalInput(rel="#reader")= item.title
         - if (title_selection == "webpage")
           - if (item.webpage)
             - if (item.webpage.title)
-              h2.title= item.webpage.title
+              h2.title.modalInput(rel="#reader")= item.webpage.title
         - if (item.link)
           .url= item.link
       .body
