--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -256,12 +256,13 @@
 		overflow-y: auto;
 		top: 20px;
 		bottom: 20px;
+		padding:10px 10px 10px 5px;
 		
 		> .title {
 			margin:0px;
 			margin-bottom:10px;
-			padding:10px 0 10px 5px;
 			border-bottom:1px solid #333;
+			padding:10px 10px 10px 5px;
 		}
 		
 		> .body {
