--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -167,6 +167,10 @@
 		display: none;
 		margin-top: 10px;
 		
+		> .header {
+			display: none;
+		}
+		
 		> .num-items {
 			text-align: center;
 			padding-bottom: 5px;
