Started work on login / sign up

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -238,6 +238,19 @@
 	}
 }
 
+.login, .signup {
+	text-align: center;
+	width: 100%;
+	margin-top: 10px;
+	margin-bottom: 15px;
+
+	> form {
+		input {
+			font-size: 14px;
+		}
+	}
+}
+
 .text-body {
 	pre {
 		white-space: pre-wrap;       /* css-3 */
