Made it so password fields' placeholders work correctly

--- a/src/views/signup.jade
+++ b/src/views/signup.jade
@@ -7,6 +7,6 @@
     .password-control
       input.password-input(type="password", placeholder="password", name="password")
     .confirm-password-control
-      input.confirm-password-input(type="password", placeholder="confirm-password", name="confirm-password")
+      input.confirm-password-input(type="password", placeholder="confirm password", name="confirm-password")
     .submit-control
       input.submit-button(type="submit", name="submit", value="Sign Up")
