Fixed login / signup form actions

--- a/src/views/login.jade
+++ b/src/views/login.jade
@@ -1,5 +1,5 @@
 .login
-  form
+  form(action=base_url+"home/login", method="post")
     .username-control
       input.username-input(type="text", placeholder="username", name="username")
     .password-control
