--- a/src/views/signup.jade
+++ b/src/views/signup.jade
@@ -7,6 +7,9 @@
     .password-control
       input.password-input(type="password", placeholder="password", name="password")
     .confirm-password-control
-      input.confirm-password-input(type="password", placeholder="confirm password", name="confirm-password")
+      input.confirm-password-input(type="password", placeholder="confirm password", name="confirm_password")
     .submit-control
       input.submit-button(type="submit", name="submit", value="Sign Up")
+  .message
+    - if (typeof(error_message) != 'undefined') // hack to fix weird bug
+      p.error= error_message
