--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -10,6 +10,7 @@
 
 #navbar {
 	padding-left: 5px;
+	padding-right: 5px;
 	border-bottom: 1px dotted;
 	
 	#expand-control {
@@ -20,6 +21,14 @@
 		#editing-control {
 			display: none;
 		}
+	}
+	
+	> .left-navigation {
+		float: left;
+	}
+
+	> .right-navigation {
+		float: right;
 	}
 }
 
