--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -21,23 +21,31 @@ html
   body
     #header
     	#navbar
-        span#collapse-expand
-          span#collapse-control
-            a(id="collapse-button", href='#', title='Collapse everything') Collapse
-          span#expand-control
-            a(id="expand-button", href='#', title='Expand everything') Expand
-        span \ - 
-        span#edit-page
-          span#default-control
-            a(id="edit-button", href='#') Edit
-          span#editing-control
-            span [\ 
-            a(id="done-button", href='#') Done
-            span \ - 
-            a(id="add-feed-button", href='#') Add Feed
-            span \ - 
-            a(id="add-column-button", href='#') Add Column
-            span \ ]
+        .left-navigation
+          span#collapse-expand
+            span#collapse-control
+              a(id="collapse-button", href='#', title='Collapse everything') Collapse
+            span#expand-control
+              a(id="expand-button", href='#', title='Expand everything') Expand
+          span \ - 
+          span#edit-page
+            span#default-control
+              a(id="edit-button", href='#') Edit
+            span#editing-control
+              span [\ 
+              a(id="done-button", href='#') Done
+              span \ - 
+              a(id="add-feed-button", href='#') Add Feed
+              span \ - 
+              a(id="add-column-button", href='#') Add Column
+              span \ ]
+        .right-navigation
+          span#login
+            a(href=base_url+'home/login', title='Login') Login
+          span \ - 
+          span#signup
+            a(href=base_url+'home/signup', title='Sign Up') Sign Up
+        .clear
       #folio
         h1 The Headlyne Times
         #subtitle December 23, 2010
