Added notification system

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -339,3 +339,23 @@
 	top: 30px !important;
 	bottom: 30px !important;
 }
+
+#notifications {
+	padding-top: 10px;
+	padding-bottom: 0px;
+	border-top: 1px dotted;
+	border-bottom: 1px dotted;
+	margin-bottom: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	text-align: center;
+	cursor: pointer;
+	
+	> .content {
+	}
+
+	> .hide-label {
+		font-size: 14px;
+		color: #333;
+	}
+}
