--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -52,6 +52,13 @@ html
       .content
         h2.title
         .body
+    #notifications
+      p.content
+        b Headlyne allows you to read all of your feeds without ever having to leave the page.
+        p Click on any body of text or any headline on this page to read the whole article. Feel feel to play around with anything you see!
+        p After logging in or signing up, you can edit this page and make it totally yours with the edit button on the top left corner of the page.
+        p Enjoy!
+      p.hide-label (click on this message to hide)
     #content!= content
     #footer
       #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
