Modularizing templating system

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -341,21 +341,26 @@
 }
 
 #notifications {
-	padding-top: 10px;
-	padding-bottom: 0px;
-	border-top: 1px dotted;
-	border-bottom: 1px dotted;
-	margin-bottom: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
-	text-align: center;
-	cursor: pointer;
+	display: none;
 	
 	> .content {
-	}
+		padding-top: 10px;
+		padding-bottom: 0px;
+		border-top: 1px dotted;
+		border-bottom: 1px dotted;
+		margin-bottom: 5px;
+		padding-left: 10px;
+		padding-right: 10px;
+		text-align: center;
+		cursor: pointer;
+		
+		> .body {
 
-	> .hide-label {
-		font-size: 14px;
-		color: #333;
+		}
+	
+		> .hide-label {
+			font-size: 14px;
+			color: #333;
+		}
 	}
 }
