--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -54,13 +54,9 @@ html
         .body
     #notifications
       .content
-        p
-          b Headlyne allows you to read all of your feeds without ever having to leave the page.
-        p Click on any body of text or any headline on this page to read the whole article. Feel feel to play around with anything you see!
-        p After logging in or signing up, you can edit this page and make it totally yours with the edit button on the top left corner of the page.
-        p Enjoy!
-      .hide-label
-        p (click on this message to hide)
+        .body!= notifications
+        .hide-label
+          p (click on this message to hide)
     #content!= content
     #footer
       #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
