Renamed navigation divs for clarity

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -23,11 +23,11 @@
 		}
 	}
 	
-	> .left-navigation {
+	> .page-manipulation {
 		float: left;
 	}
 
-	> .right-navigation {
+	> .account-manipulation {
 		float: right;
 	}
 }
