--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -20,7 +20,7 @@ html
   body
     #header
     	#navbar
-        .left-navigation
+        .page-manipulation
           span#collapse-expand
             span#collapse-control
               a(id="collapse-button", href='#', title='Collapse everything') Collapse
@@ -38,7 +38,7 @@ html
               span \ - 
               a(id="add-column-button", href='#') Add Column
               span \ ]
-        .right-navigation
+        .account-manipulation
           span#login
             a(href=base_url+'home/login', title='Login') Login
           span \ - 
