WIP on splitting view up into partials

--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -20,30 +20,8 @@ html
   body
     #header
     	#navbar
-        .page-manipulation
-          span#collapse-expand
-            span#collapse-control
-              a(id="collapse-button", href='#', title='Collapse everything') Collapse
-            span#expand-control
-              a(id="expand-button", href='#', title='Expand everything') Expand
-          span \ - 
-          span#edit-page
-            span#default-control
-              a(id="edit-button", href='#') Edit
-            span#editing-control
-              span [\ 
-              a(id="done-button", href='#') Done
-              span \ - 
-              a(id="add-feed-button", href='#') Add Feed
-              span \ - 
-              a(id="add-column-button", href='#') Add Column
-              span \ ]
-        .account-manipulation
-          span#login
-            a(href=base_url+'home/login', title='Login') Login
-          span \ - 
-          span#signup
-            a(href=base_url+'home/signup', title='Sign Up') Sign Up
+        .page-navigation!= page_navigation
+        .account-navigation!= account_navigation
         .clear
       #folio
         h1 The Headlyne Times
