Isolated navigation partials and intelligently showing them

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -23,11 +23,11 @@
 		}
 	}
 	
-	> .page-manipulation {
+	> .page-navigation {
 		float: left;
 	}
 
-	> .account-manipulation {
+	> .account-navigation {
 		float: right;
 	}
 }
