Showing name in account navigation when logged in

--- a/src/views/account_navigation_logged_in.jade
+++ b/src/views/account_navigation_logged_in.jade
@@ -1,5 +1,5 @@
-span#username
-  a(href="#", title='Hello') Logged in
+span#name
+  a(href="#")= name
 span \ - 
 span#logout
   a(href=base_url+'home/logout', title='Log Out') Log Out
