Updating folio for each page

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -36,15 +36,15 @@
 	text-align: center;
 	margin-top: 30px;
 	margin-bottom: 15px;
+	
+	> .subtitle {
+		font-family: Andale Mono, monospace;
+	}
 }
 
 #footer {
 	text-align: center;
 	border-top: 1px dotted;
-}
-
-#subtitle {
-	font-family: Andale Mono, monospace;
 }
 
 .page {
