--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -24,8 +24,8 @@ html
         .account-navigation!= account_navigation
         .clear
       #folio
-        h1 The Headlyne Times
-        #subtitle December 23, 2010
+        h1.title= folio_title
+        .subtitle= folio_subtitle
     #reader.modal
       .content
         h2.title
