--- a/src/views/welcome_notification.jade
+++ b/src/views/welcome_notification.jade
@@ -1,5 +1,9 @@
 p
   b Headlyne allows you to read all of your feeds without ever having to leave the page.
 p Click on any body of text or any headline on this page to read the whole article. Feel feel to play around with anything you see!
-p After logging in or signing up, you can edit this page and make it totally yours with the edit button on the top left corner of the page.
+p
+  a(href="/home/login") Log in
+  | or
+  a(href="/home/signup") sign up
+  | to edit this page and make it totally yours.
 p Enjoy!
