Added first and last name fields to sign up form

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -47,6 +47,26 @@
 	border-top: 1px dotted;
 }
 
+#content {
+	> .signup {
+		> form {
+			input {
+				width: 200px;
+			}
+			
+			> .name-control {
+				input {
+					width: 95px;
+				}
+				
+				> .first-name-input {
+					margin-right: 5px;
+				}
+			}
+		}
+	}
+}
+
 .page {
 	width: 100%;
 	margin-left: auto;
