--- a/src/views/signup.jade
+++ b/src/views/signup.jade
@@ -4,6 +4,9 @@
       input.username-input(type="text", placeholder="username", name="username", value=username)
     .email-control
       input.email-input(type="text", placeholder="email address", name="email", value=email)
+    .name-control
+      input.first-name-input(type="text", placeholder="first name", name="first_name", value=first_name)
+      input.last-name-input(type="text", placeholder="last name", name="last_name", value=last_name)
     .password-control
       input.password-input(type="password", placeholder="password", name="password")
     .confirm-password-control
