Improved move icon in feed edit overlay

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -143,10 +143,12 @@
 			> .move-icon {
 				position: absolute;
 				top: 50%;
-				height: 20px;
-				margin-top:-10px;
+				height: 25px;
+				width: 25px;
+				margin-top:-12px;
 				left: 5px;
 				font-size: 14px;
+				background-image: url('/includes/img/icons/move.png');
 			}
 			
 			> .edit-delete {
@@ -326,7 +328,7 @@
 	-webkit-box-shadow: 0 0 50px #ccc;
 	
 	> .close {
-		background-image:url(/includes/img/buttons/close.png);
+		background-image:url('/includes/img/buttons/close.png');
 		position:absolute;
 		right:-15px;
 		top:-15px;
