--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -5,7 +5,7 @@
     .title-selection= title_selection
     .body-selection= body_selection
   .edit-overlay
-    span.move-icon.ui-icon.ui-icon-arrow-4
+    span.move-icon
     span.edit-delete
       span [\ 
       span.delete
