Added url to settings div for feeds

--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -1,6 +1,7 @@
 .header
   h3.title= title
   .settings
+    .url= url
     .num-feed-items= num_feed_items
     .title-selection= title_selection
     .body-selection= body_selection
