--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -28,25 +28,4 @@
   .url-control
     input(type="text", value=url, placeholder="feed URL").url-input
 .preview
-.body
-  - each item in items
-    .item
-      .header
-        - if (title_selection == "item")
-          - if (item.title)
-            h2.title.modalInput(rel="#reader")= item.title
-        - if (title_selection == "webpage")
-          - if (item.webpage)
-            - if (item.webpage.title)
-              h2.title.modalInput(rel="#reader")= item.webpage.title
-        - if (item.link)
-          .url= item.link
-      .body
-        .full-article
-        - if (body_selection == "item")
-          - if (item.description)
-            div.snippet!= item.description
-        - if (body_selection == "webpage")
-          - if (item.webpage)
-            - if (item.webpage.snippet)
-              div.snippet!= item.webpage.snippet
+.body!= body
