Moved all account stuff into account controller

--- a/src/views/account_navigation_logged_in.jade
+++ b/src/views/account_navigation_logged_in.jade
@@ -2,4 +2,4 @@ span#name
   a(href="#")= name
 span \ - 
 span#logout
-  a(href=base_url+'home/logout', title='Log Out') Log Out
+  a(href=base_url+'account/logout', title='Log Out') Log Out
