--- a/src/views/account_navigation_not_logged_in.jade
+++ b/src/views/account_navigation_not_logged_in.jade
@@ -1,5 +1,5 @@
 span#login
-  a(href=base_url+'home/login', title='Login') Login
+  a(href=base_url+'account/login', title='Login') Login
 span \ - 
 span#signup
-  a(href=base_url+'home/signup', title='Sign Up') Sign Up
+  a(href=base_url+'account/signup', title='Sign Up') Sign Up
