--- a/src/views/login.jade
+++ b/src/views/login.jade
@@ -1,5 +1,5 @@
 .login
-  form(action=base_url+"home/login", method="post")
+  form(action=base_url+"account/login", method="post")
     .username-control
       input.username-input(type="text", placeholder="username", name="username", value=username)
     .password-control
