--- a/src/views/register.jade
+++ b/src/views/register.jade
@@ -1,5 +1,5 @@
 .signup
-  form(action=base_url+"home/register", method="post")
+  form(action=base_url+"account/register", method="post")
     .username-control
       input.username-input(type="text", placeholder="username", name="username", value=username)
     .invite-code-control
