--- a/src/views/welcome_notification.jade
+++ b/src/views/welcome_notification.jade
@@ -2,7 +2,7 @@ p
   b Headlyne allows you to read all of your feeds without ever having to leave the page.
 p Click on any body of text or any headline on this page to read the whole article. Feel feel to play around with anything you see!
 p
-  a(href="/home/login") Log in
+  a(href="/account/login") Log in
   | or
-  a(href="/home/signup") sign up
+  a(href="/account/signup") sign up
   | to edit this page and make it totally yours.
