--- a/src/views/signup_with_invite.jade
+++ b/src/views/signup_with_invite.jade
@@ -1,5 +1,5 @@
 .signup
-  form(action=base_url+"account/register", method="post")
+  form(action=base_url+"account/signup", method="post")
     .username-control
       input.username-input(type="text", placeholder="username", name="username", value=username)
     .email-control
