Dynamically calculating column width when displaying page

--- a/src/views/page.jade
+++ b/src/views/page.jade
@@ -1,6 +1,6 @@
 .page
   - each column in columns 
-    .column
+    .column(style="width: " + (99 / columns.length) + "%")
       .header
         .edit-overlay
           span.delete
