--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -294,7 +294,7 @@
 		word-wrap: break-word;       /* Internet Explorer 5.5+ */
 	}
 	
-	img {
+	img, object {
 		max-width:100%;
 		height:auto;
 	}
