Added 'from' div for each feed item

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -242,8 +242,10 @@
 			margin-bottom: 20px;
 			
 			> .header {
-				> .url {
-					display: none;
+				margin-bottom: 10px;
+				
+				> .from {
+					font-size: 14px;
 				}
 				
 				> .title {
