Changed name in account navigation to text from link

--- a/src/views/account_navigation_logged_in.jade
+++ b/src/views/account_navigation_logged_in.jade
@@ -1,5 +1,4 @@
-span#name
-  a(href="#")= name
+span#name= name
 span \ - 
 span#logout
   a(href=base_url+'account/logout', title='Log Out') Log Out
