--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -37,4 +37,4 @@ html
           p (click on this message to hide)
     #content!= content
     #footer
-      #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
+      #copyright &copy 2011 Chetan Surpur and Manoj Mardithaya
