Replaced feed item url in header for full article retrieval

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -248,6 +248,10 @@
 			> .header {
 				margin-bottom: 10px;
 				
+				> .url {
+					display: none;
+				}
+				
 				> .from {
 					font-size: 14px;
 				}
