--- a/src/views/feed_body.jade
+++ b/src/views/feed_body.jade
@@ -9,6 +9,7 @@
           - if (item.webpage.title)
             h2.title.modalInput(rel="#reader")= item.webpage.title
       - if (item.link)
+        .url= item.link
         .from
           p
             | from
