--- a/src/views/feed_body.jade
+++ b/src/views/feed_body.jade
@@ -3,7 +3,7 @@
     .header
       - if (title_selection == "item")
         - if (item.title)
-          h2.title.modalInput(rel="#reader")= item.title
+          h2.title= item.title
       - if (title_selection == "webpage")
         - if (item.webpage)
           - if (item.webpage.title)
