Widened reader's content container

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -352,6 +352,7 @@
 	.content {
 		position: absolute;
 		overflow-y: auto;
+		width: 97%;
 		top: 20px;
 		bottom: 20px;
 		padding:10px 10px 10px 5px;
