--- a/src/views/request_invite.jade
+++ b/src/views/request_invite.jade
@@ -1,5 +1,5 @@
 .request_invite
-  form(action=base_url+"account/invite_requested", method="post")
+  form(action=base_url+"account/request_invite", method="post")
     .email-control
       input.email-input(type="text", placeholder="email address", name="email", value=email)
     .name-control
