Fixed encoding issue

--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -1,6 +1,7 @@
 !!! 5
 html
   head
+    meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     title= title
     link(href="http://fonts.googleapis.com/css?family=UnifrakturCook:bold", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/reset.css", rel="stylesheet", type="text/css")
