Made navbar dark

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -12,6 +12,12 @@
 	padding-left: 5px;
 	padding-right: 5px;
 	border-bottom: 1px dotted;
+	background-color: #333;
+	color: #eee;
+	
+	a {
+		color: #eee;
+	}
 	
 	#expand-control {
 		display: none;
@@ -52,7 +58,6 @@
 }
 
 #content {
-	
 	> .login, > .signup, > .request-invite {
 		text-align: center;
 		width: 100%;
