--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -26,6 +26,6 @@
     .clear
 .source
   .url-control
-    input(type="text", value=url, placeholder="feed URL").url-input
+    input(type="text", value=url, placeholder="type to search or enter feed URL").url-input
 .preview
 .body!= body
