--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -15,10 +15,12 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     // Google Loader
     script(src="http://www.google.com/jsapi?key=AIzaSyA5m1Nc8ws2BbmPRwKu5gFradvD_hgq6G0", type="text/javascript")
     // Google Libraries
-    script
-      | google.load("jquery", "1.4.2")
-      | google.load("jqueryui", "1.7.2")
+    script(type="text/javascript");
+      | google.load("jquery", "1.4.4");
+      | google.load("jqueryui", "1.8.9");
       | google.load("feeds", "1");
+    // jQuery Tools
+    script(src="http://cdn.jquerytools.org/1.2.5/all/jquery.tools.min.js", type="text/javascript")
     // Headlyne Client
     script(src=base_url+"includes/js/client.js", type="text/javascript")
   body
