--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -13,7 +13,8 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     // LESS
     script(src=base_url+"includes/js/less-1.0.35.min.js", type="text/javascript")
     // Google Loader
-    script(src="http://www.google.com/jsapi?key=AIzaSyA5m1Nc8ws2BbmPRwKu5gFradvD_hgq6G0", type="text/javascript")
+    //script(src="http://www.google.com/jsapi?key=AIzaSyA5m1Nc8ws2BbmPRwKu5gFradvD_hgq6G0", type="text/javascript")
+    script(src="http://www.google.com/jsapi?key=ABQIAAAAW4cVPqBm3BJZ6u_YiIuyoBRmX3wZgzJ12H0KQXVGYiO7OP4rABSe2ydsuHeAtHPY1fAV91Hyv1nF7w", type="text/javascript")
     // Google Libraries
     script(type="text/javascript");
       | google.load("jquery", "1.4.4");
