Added collapsed state info to HTML for each feed item

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -286,6 +286,10 @@
 			> .header {
 				margin-bottom: 10px;
 				
+				> .settings {
+					display: none;
+				}
+				
 				> .url {
 					display: none;
 				}
@@ -418,4 +422,8 @@
 			color: #333;
 		}
 	}
+}
+
+.hidden {
+	display: none;
 }
