--- a/src/views/feed_body.jade
+++ b/src/views/feed_body.jade
@@ -1,6 +1,8 @@
 - each item in items
   .item
     .header
+      .settings
+        .collapsed= item.collapsed
       - if (title_selection == "item")
         - if (item.title)
           h2.title= item.title
